--- a/Scriptoria/Scriptoria.cabal
+++ b/Scriptoria/Scriptoria.cabal
@@ -1,4 +1,4 @@
-name:              scriptorium
+name:              Scriptoria
 version:           0.0.0
 cabal-version:     >= 1.8
 build-type:        Simple
@@ -72,14 +72,14 @@ library
                  , monad-logger                  >= 0.3
                  , fast-logger                   >= 0.3
 
-executable         scriptorium
+executable         Scriptoria
     if flag(library-only)
         Buildable: False
 
     main-is:           main.hs
     hs-source-dirs:    app
     build-depends:     base
-                     , scriptorium
+                     , Scriptoria
                      , yesod-default
 
     ghc-options:       -threaded -O2
@@ -91,7 +91,7 @@ test-suite test
     ghc-options:       -Wall
 
     build-depends: base
-                 , scriptorium
+                 , Scriptoria
                  , yesod-test >= 0.3 && < 0.4
                  , yesod-default
                  , yesod-core
