--- a/Scriptoria/config/postgresql.yml
+++ b/Scriptoria/config/postgresql.yml
@@ -1,24 +1,24 @@
 Default: &defaults
-  user: scriptorium
-  password: scriptorium
+  user: Scriptoria
+  password: Scriptoria
   host: localhost
   port: 5432
-  database: scriptorium
+  database: Scriptoria
   poolsize: 10
 
 Development:
   <<: *defaults
 
 Testing:
-  database: scriptorium_test
+  database: Scriptoria_test
   <<: *defaults
 
 Staging:
-  database: scriptorium_staging
+  database: Scriptoria_staging
   poolsize: 100
   <<: *defaults
 
 Production:
-  database: scriptorium_production
+  database: Scriptoria_production
   poolsize: 100
   <<: *defaults
